# xhs_service/biz/handler/organization/dependencies.go
@@ -1,0 +1,7 @@
+package organization
+
+import service "media_agent/xhs_service/biz/service/organization"
+
+var organizationService *service.Service
+
+func SetService(value *service.Service) { organizationService = value }
