# xhs_service/biz/router/organization/organization.go
@@ -1,0 +1,30 @@
+// Code generated by hertz generator. DO NOT EDIT.
+
+package organization
+
+import (
+	"github.com/cloudwego/hertz/pkg/app/server"
+	organization "media_agent/xhs_service/biz/handler/organization"
+)
+
+/*
+ This file will register all the routes of the services in the master idl.
+ And it will update automatically when you use the "update" command for the idl.
+ So don't modify the contents of the file, or your code will be deleted when it is updated.
+*/
+
+// Register register routes based on the IDL 'api.${HTTP Method}' annotation.
+func Register(r *server.Hertz) {
+
+	root := r.Group("/", rootMw()...)
+	{
+		_v1 := root.Group("/v1", _v1Mw()...)
+		{
+			_xhs := _v1.Group("/xhs", _xhsMw()...)
+			{
+				_me := _xhs.Group("/me", _meMw()...)
+				_me.GET("/organizations", append(_listmyorganizationsMw(), organization.ListMyOrganizations)...)
+			}
+		}
+	}
+}
